@startuml
enum TransportType {
    Car= 0,
    Pedestrian= 1,
    Bike= 2,
}
class Tour {
    + Id : int <<get>>
    + Description : String? <<get>> <<set>>
    + Distance : double <<get>> <<set>>
    + EstimatedTime : int <<get>> <<set>>
    + Popularity : int <<get>> <<set>>
    + ChildFriendliness : double <<get>> <<set>>
    + Tour()
    + Tour(name:string, description:string, from:string, to:string, transportType:TransportType)
}
class "ObservableCollection`1"<T> {
}
Tour --> "Name" String
Tour --> "From" String
Tour --> "To" String
Tour --> "TransportType" TransportType
Tour --> "Logs<TourLog>" "ObservableCollection`1"
@enduml
